[add]header and top section

--- a/index.html
+++ b/index.html
@@ -9,12 +9,29 @@
 <body>
 
   <header>
-    <div>
-      
-    </div>
+    <section>
+      <div class="logo">logo</div>
+      <div class="menu">
+        <span>link</span>
+        <span>link</span>
+        <span>link</span>
+        <span>link</span>
+      </div>
+      <div class="login">login</div>
+    </section>
   </header>
 
-  <main></main>
+  <main>
+    <section class="hero"> 
+      <div class="top">
+        <h1>titolo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, quibusdam molestias perspiciatis similique earum quisquam qui modi asperiores id vitae culpa doloremque eum? Fuga sequi sed fugit obcaecati assumenda minus!</p>
+        <button>bottone</button>
+        <button>bottone</button>
+      </div>
+    </section>
+
+  </main>
 
   <footer></footer>
 
