[add] sections with images

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </header>
 
   <main>
-    <section class="hero"> 
+    <section class="container-top"> 
       <div class="top">
         <h1>titolo</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, quibusdam molestias perspiciatis similique earum quisquam qui modi asperiores id vitae culpa doloremque eum? Fuga sequi sed fugit obcaecati assumenda minus!</p>
@@ -30,6 +30,34 @@
         <button>bottone</button>
       </div>
     </section>
+    <section class="container2">
+      <div class="top2">
+        <img src="img/img1.jpg" alt="">
+        <div class="testo">
+          <h2>titolo top2</h2>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A ut consectetur dolor. Voluptatem est delectus placeat recusandae iure. Nihil, non.</p>
+        </div>
+      </div>
+    </section>
+    <section class="container3">
+      <div class="top3">
+        <img src="img/img1.jpg" alt="">
+        <div class="testo">
+          <h2>titolo top2</h2>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A ut consectetur dolor. Voluptatem est delectus placeat recusandae iure. Nihil, non.</p>
+        </div>
+      </div>
+    </section>
+    <section class="container4">
+      <div class="top4">
+        <img src="img/img1.jpg" alt="">
+        <div class="testo">
+          <h2>titolo top2</h2>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A ut consectetur dolor. Voluptatem est delectus placeat recusandae iure. Nihil, non.</p>
+        </div>
+      </div>
+    </section>
+
 
   </main>
 
