[add] parte bottom e footer

--- a/index.html
+++ b/index.html
@@ -57,11 +57,64 @@
         </div>
       </div>
     </section>
-
-
+    <section class="bottom">
+      <h2>titolo bottom</h2>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam, temporibus. Rem officia distinctio aspernatur sapiente perspiciatis exercitationem numquam dolor maiores, minus illo necessitatibus debitis cum doloremque repellendus. Doloremque, aut deserunt.</p>
+      <img src="img/img1.jpg" alt="">
+      <h4>pronto per l avventura</h4>
+      <button>bottone</button>
+    </section>
   </main>
 
-  <footer></footer>
-
+  <footer>
+    <div class="colonne">
+      <div class="colonna1">
+        <h5>prodotto</h5>
+        <p>scarica</p>
+        <p>perche discord</p>
+        <p>nitro</p>
+        <p>sicurezza</p>
+        <p>assistenza</p>
+      </div>
+      <div class="colonna2">
+        <h5>prodotto</h5>
+        <p>scarica</p>
+        <p>perche discord</p>
+        <p>nitro</p>
+        <p>sicurezza</p>
+        <p>assistenza</p>
+      </div>
+      <div class="colonna3">
+        <h5>prodotto</h5>
+        <p>scarica</p>
+        <p>perche discord</p>
+        <p>nitro</p>
+        <p>sicurezza</p>
+        <p>assistenza</p>
+      </div>
+      <div class="colonna4">
+        <h5>prodotto</h5>
+        <p>scarica</p>
+        <p>perche discord</p>
+        <p>nitro</p>
+        <p>sicurezza</p>
+        <p>assistenza</p>
+        <p>nitro</p>
+        <p>sicurezza</p>
+        <p>assistenza</p>
+      </div>
+      <div class="colonna5">
+        <h5>prodotto</h5>
+        <p>scarica</p>
+        <p>perche discord</p>
+        <p>nitro</p>
+        <p>sicurezza</p>
+        <p>assistenza</p>
+      </div>
+    </div>
+    <hr>
+  </footer>
+  
 </body>
 </html>
+
