--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
   <header>
     <section>
       <div class="logo">logo</div>
-      <div class="menu">
-        <span>link</span>
-        <span>link</span>
-        <span>link</span>
-        <span>link</span>
-      </div>
+      <nav class="menu">
+        <a href="#">link</a>
+        <a href="#">link</a>
+        <a href="#">link</a>
+        <a href="#">link</a>
+      </nav>
       <div class="login">login</div>
     </section>
   </header>
@@ -24,7 +24,7 @@
   <main>
     <section class="container-top"> 
       <div class="top">
-        <h1>titolo</h1>
+        <h1>titolo top1</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, quibusdam molestias perspiciatis similique earum quisquam qui modi asperiores id vitae culpa doloremque eum? Fuga sequi sed fugit obcaecati assumenda minus!</p>
         <button>bottone</button>
         <button>bottone</button>
@@ -43,7 +43,7 @@
       <div class="top3">
         <img src="img/img1.jpg" alt="">
         <div class="testo">
-          <h2>titolo top2</h2>
+          <h2>titolo top3</h2>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A ut consectetur dolor. Voluptatem est delectus placeat recusandae iure. Nihil, non.</p>
         </div>
       </div>
@@ -52,7 +52,7 @@
       <div class="top4">
         <img src="img/img1.jpg" alt="">
         <div class="testo">
-          <h2>titolo top2</h2>
+          <h2>titolo top4</h2>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A ut consectetur dolor. Voluptatem est delectus placeat recusandae iure. Nihil, non.</p>
         </div>
       </div>
@@ -67,52 +67,57 @@
   </main>
 
   <footer>
-    <div class="colonne">
-      <div class="colonna1">
-        <h5>prodotto</h5>
-        <p>scarica</p>
-        <p>perche discord</p>
-        <p>nitro</p>
-        <p>sicurezza</p>
-        <p>assistenza</p>
+    <section class="contenitore-footer">
+      <section class="colonne">
+        <div class="colonna-grande">
+          <h3>titolo</h3>
+          <p>Lorem, ipsum dolor.</p>
+          <p>Lorem, ipsum dolor.</p>
+          <p>Lorem, ipsum dolor.</p>
+          <p>Lorem, ipsum dolor.</p>
+        </div>
+        <div class="colonna-piccola">
+          <h3>titolo</h3>
+          <p>Lorem, ipsum dolor.</p>
+          <p>Lorem, ipsum dolor.</p>
+          <p>Lorem, ipsum dolor.</p>
+          <p>Lorem, ipsum dolor.</p>
+          <p>Lorem, ipsum dolor.</p>
+          <p>Lorem, ipsum dolor.</p>
+        </div>
+        <div class="colonna-piccola">
+          <h3>titolo</h3>
+          <p>Lorem, ipsum dolor.</p>
+          <p>Lorem, ipsum dolor.</p>
+          <p>Lorem, ipsum dolor.</p>
+          <p>Lorem, ipsum dolor.</p>
+          <p>Lorem, ipsum dolor.</p>
+          <p>Lorem, ipsum dolor.</p>
+        </div>
+        <div class="colonna-piccola">
+          <h3>titolo</h3>
+          <p>Lorem, ipsum dolor.</p>
+          <p>Lorem, ipsum dolor.</p>
+          <p>Lorem, ipsum dolor.</p>
+          <p>Lorem, ipsum dolor.</p>
+          <p>Lorem, ipsum dolor.</p>
+          <p>Lorem, ipsum dolor.</p>
+        </div>
+        <div class="colonna-piccola">
+          <h3>titolo</h3>
+          <p>Lorem, ipsum dolor.</p>
+          <p>Lorem, ipsum dolor.</p>
+          <p>Lorem, ipsum dolor.</p>
+          <p>Lorem, ipsum dolor.</p>
+          <p>Lorem, ipsum dolor.</p>
+          <p>Lorem, ipsum dolor.</p>
+        </div>
+      </section>
+      <div class="footer-sotto">
+        <img src="img/img1.jpg" alt="">
+        <button>bottone</button>
       </div>
-      <div class="colonna2">
-        <h5>prodotto</h5>
-        <p>scarica</p>
-        <p>perche discord</p>
-        <p>nitro</p>
-        <p>sicurezza</p>
-        <p>assistenza</p>
-      </div>
-      <div class="colonna3">
-        <h5>prodotto</h5>
-        <p>scarica</p>
-        <p>perche discord</p>
-        <p>nitro</p>
-        <p>sicurezza</p>
-        <p>assistenza</p>
-      </div>
-      <div class="colonna4">
-        <h5>prodotto</h5>
-        <p>scarica</p>
-        <p>perche discord</p>
-        <p>nitro</p>
-        <p>sicurezza</p>
-        <p>assistenza</p>
-        <p>nitro</p>
-        <p>sicurezza</p>
-        <p>assistenza</p>
-      </div>
-      <div class="colonna5">
-        <h5>prodotto</h5>
-        <p>scarica</p>
-        <p>perche discord</p>
-        <p>nitro</p>
-        <p>sicurezza</p>
-        <p>assistenza</p>
-      </div>
-    </div>
-    <hr>
+    </section>
   </footer>
   
 </body>
