[fix] largezzza dei box immagine e testo

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
     </section>
     <section class="container2">
       <div class="top2">
-        <img src="img/img1.jpg" alt="">
+        <div class="immagine">
+        </div>
         <div class="testo">
           <h2>titolo top2</h2>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A ut consectetur dolor. Voluptatem est delectus placeat recusandae iure. Nihil, non.</p>
@@ -41,7 +42,8 @@
     </section>
     <section class="container3">
       <div class="top3">
-        <img src="img/img1.jpg" alt="">
+        <div class="immagine">
+        </div>
         <div class="testo">
           <h2>titolo top3</h2>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A ut consectetur dolor. Voluptatem est delectus placeat recusandae iure. Nihil, non.</p>
@@ -50,7 +52,8 @@
     </section>
     <section class="container4">
       <div class="top4">
-        <img src="img/img1.jpg" alt="">
+        <div class="immagine">
+        </div>
         <div class="testo">
           <h2>titolo top4</h2>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A ut consectetur dolor. Voluptatem est delectus placeat recusandae iure. Nihil, non.</p>
@@ -67,8 +70,8 @@
   </main>
 
   <footer>
-    <section class="contenitore-footer">
-      <section class="colonne">
+    <div class="contenitore-footer">
+      <div class="colonne">
         <div class="colonna-grande">
           <h3>titolo</h3>
           <p>Lorem, ipsum dolor.</p>
@@ -112,12 +115,12 @@
           <p>Lorem, ipsum dolor.</p>
           <p>Lorem, ipsum dolor.</p>
         </div>
-      </section>
+      </div>
       <div class="footer-sotto">
         <img src="img/img1.jpg" alt="">
         <button>bottone</button>
       </div>
-    </section>
+    </div>
   </footer>
   
 </body>
