--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </header>
 
   <main>
-    <section class="container-top"> 
+    <section class="container-top "> 
       <div class="top">
         <h1>titolo top1</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, quibusdam molestias perspiciatis similique earum quisquam qui modi asperiores id vitae culpa doloremque eum? Fuga sequi sed fugit obcaecati assumenda minus!</p>
@@ -30,8 +30,8 @@
         <button>bottone</button>
       </div>
     </section>
-    <section class="container2">
-      <div class="top2">
+    <section>
+      <div class="box">
         <div class="immagine">
         </div>
         <div class="testo">
@@ -40,8 +40,8 @@
         </div>
       </div>
     </section>
-    <section class="container3">
-      <div class="top3">
+    <section class="container-grey">
+      <div class="box invertito">
         <div class="immagine">
         </div>
         <div class="testo">
@@ -50,8 +50,8 @@
         </div>
       </div>
     </section>
-    <section class="container4">
-      <div class="top4">
+    <section>
+      <div class="box">
         <div class="immagine">
         </div>
         <div class="testo">
